--- a/project-edit.html
+++ b/project-edit.html
@@ -214,7 +214,7 @@
                       type=""
                       class="form-control"
                       id=""
-                      placeholder="10905001"
+                      value="10905001"
                     />
                   </div>
                 </div>
@@ -224,8 +224,11 @@
                   <label for="" class="col-md-2 col-form-label">專案類型</label>
                   <div class="col-md-10">
                     <select class="form-control" id="">
-                      <option>公司專案</option>
-                      <option>其他參考</option>
+                      <option>品牌設計</option>
+                      <option>空間設計</option>
+                      <option>網頁設計</option>
+                      <option>活動場佈</option>
+                      <option>印刷設計</option>
                     </select>
                   </div>
                 </div>
@@ -238,7 +241,8 @@
                       type=""
                       class="form-control"
                       id=""
-                      placeholder="ASUS Zenpad主視覺設計主主視覺設ASUS Zenpad主視覺設計主主視覺設"
+                    
+                      value="ASUS Zenpad主視覺設計主主視覺設ASUS Zenpad主視覺設計主主視覺設"
                     />
                   </div>
                 </div>
@@ -251,7 +255,7 @@
                       type=""
                       class="form-control"
                       id=""
-                      placeholder="隨打即找"
+                      value="隨打即找"
                     />
                   </div>
                 </div>
@@ -264,7 +268,7 @@
                       type=""
                       class="form-control"
                       id=""
-                      placeholder="隨打即找"
+                      value="隨打即找"
                     />
                   </div>
                 </div>
@@ -277,7 +281,7 @@
                       type="date"
                       class="form-control"
                       id="開立日期"
-                      placeholder="日期"
+                      value="日期"
                     />
                   </div>
                 </div>
@@ -290,7 +294,7 @@
                       type=""
                       class="form-control"
                       id=""
-                      placeholder="02-2222-1111"
+                      value="02-2222-1111"
                     />
                   </div>
                 </div>
@@ -303,7 +307,7 @@
                       type=""
                       class="form-control"
                       id=""
-                      placeholder="#024"
+                      value="#024"
                     />
                   </div>
                 </div>
@@ -316,7 +320,7 @@
                       type=""
                       class="form-control"
                       id=""
-                      placeholder="xxxxxxxx@borna.com.tw"
+                      value="xxxxxxxx@borna.com.tw"
                     />
                   </div>
                 </div>
@@ -329,7 +333,7 @@
                       type=""
                       class="form-control"
                       id=""
-                      placeholder="0933-xxx-xxx"
+                      value="0933-xxx-xxx"
                     />
                   </div>
                 </div>
@@ -376,7 +380,7 @@
                     class="form-control"
                     id="option5"
                     rows="5"
-                    placeholder="請輸入內容"
+                    value="請輸入內容"
                   ></textarea>
                 </div>
               </div>
@@ -396,7 +400,7 @@
                     type=""
                     class="form-control"
                     id=""
-                    placeholder="NT$100000"
+                    value="NT$100000"
                   />
                 </div>
               </div>
@@ -468,7 +472,7 @@
                     type=""
                     class="form-control"
                     id=""
-                    placeholder="PR-12912565"
+                    value="PR-12912565"
                   />
                 </div>
               </div>
@@ -481,7 +485,7 @@
                     type="date"
                     class="form-control"
                     id="開立日期"
-                    placeholder="日期"
+                    value="日期"
                   />
                 </div>
               </div>
@@ -505,7 +509,7 @@
                     type="date"
                     class="form-control"
                     id="付費日期"
-                    placeholder="日期"
+                    value="日期"
                   />
                 </div>
               </div>
@@ -527,7 +531,7 @@
                     type="text"
                     class="form-control"
                     id="invoiceNumber"
-                    placeholder="PR-12912565"
+                    value="PR-12912565"
                   />
                 </div>
               </div>
@@ -542,7 +546,7 @@
                     type="text"
                     class="form-control"
                     id="taxAmount"
-                    placeholder="NT$5000"
+                    value="NT$5000"
                   />
                 </div>
               </div>
@@ -557,7 +561,7 @@
                     class="form-control"
                     id="invoiceNote"
                     rows="5"
-                    placeholder="請輸入備註"
+                    value="請輸入備註"
                   ></textarea>
                 </div>
               </div>
@@ -589,7 +593,7 @@
                         type="text"
                         class="form-control"
                         id="invoiceNumber"
-                        placeholder="PR-12912565"
+                        value="PR-12912565"
                       />
                     </div>
                   </div>
@@ -604,7 +608,7 @@
                         type="text"
                         class="form-control"
                         id="invoiceNumber"
-                        placeholder="PR-12912565"
+                        value="PR-12912565"
                       />
                     </div>
                   </div>
@@ -619,7 +623,7 @@
                         type="text"
                         class="form-control"
                         id="invoiceNumber"
-                        placeholder="PR-12912565"
+                        value="PR-12912565"
                       />
                     </div>
                   </div>
@@ -648,7 +652,7 @@
                         type="text"
                         class="form-control"
                         id="invoiceNumber"
-                        placeholder="PR-12912565"
+                        value="PR-12912565"
                       />
                     </div>
                   </div>
@@ -663,7 +667,7 @@
                         type="text"
                         class="form-control"
                         id="invoiceNumber"
-                        placeholder="PR-12912565"
+                        value="PR-12912565"
                       />
                     </div>
                   </div>
@@ -678,7 +682,7 @@
                         type="text"
                         class="form-control"
                         id="invoiceNumber"
-                        placeholder="PR-12912565"
+                        value="PR-12912565"
                       />
                     </div>
                   </div>
@@ -707,7 +711,7 @@
                         type="text"
                         class="form-control"
                         id="invoiceNumber"
-                        placeholder="PR-12912565"
+                        value="PR-12912565"
                       />
                     </div>
                   </div>
@@ -722,7 +726,7 @@
                         type="text"
                         class="form-control"
                         id="invoiceNumber"
-                        placeholder="PR-12912565"
+                        value="PR-12912565"
                       />
                     </div>
                   </div>
@@ -737,7 +741,7 @@
                         type="text"
                         class="form-control"
                         id="invoiceNumber"
-                        placeholder="PR-12912565"
+                        value="PR-12912565"
                       />
                     </div>
                   </div>
