--- a/project-review.html
+++ b/project-review.html
@@ -187,7 +187,7 @@
         </a>
       </div>
 
-      <p class="py-3 fs-4 fw-bold">微軟Surface上市記者會</p>
+      <p class="py-3 fs-4 fw-bold">ASUS Zenpad主視覺設計ASUS Zenpad主視覺設計ASUS Zenpad主視覺設計</p>
 
       <form class="container mt-4">
         <div class="row mb-5">
@@ -266,16 +266,15 @@
                   <div class="col-md-9">Ryan Liu</div>
                 </div>
               </div>
-              <div class="col-md-12">
-                <label for="option1" class="col-md-4 col-form-label"
-                  >內容進度</label
-                >
-                <div class="col-md-12">
-                  微軟Surface上市記者會即將舉行，屆時將推出引人矚目的新產品和創新科技。活動內容包括精彩演講、即時互動體驗及媒體交流，將為您帶來嶄新的數位體驗。敬請期待這場充滿活力的盛事！
-                </div>
-              </div>
+             
             </div>
           </div>
+        </div>
+
+        <!-- 內容及進度 -->
+        <div class="border-top border-secondary mb-5">
+          <p class="pb-3 fs-5 fw-bold pt-3"> 內容及進度</p>
+          <p> 微軟Surface上市記者會即將舉行，屆時將推出引人矚目的新產品和創新科技。活動內容包括精彩演講、即時互動體驗及媒體交流，將為您帶來嶄新的數位體驗。敬請期待這場充滿活力的盛事！</p>
         </div>
 
         <!-- 專案支出 -->
@@ -331,19 +330,21 @@
           </div>
         </div>
 
+        
+
         <!-- 帳務資訊 -->
-        <div class="border-1 border-top border-secondary mb-1">
+        <div class="border-1 border-top border-secondary mb-5">
           <p class="pb-3 fs-5 fw-bold pt-3">帳務資訊</p>
           <div
-            class="d-flex fw-bold border-1 border-bottom border-secondary mb-3 fs-5"
+            class="d-flex fw-bold border-1 border-bottom border-secondary mb-3 fs-5 justify-content-center"
           >
-            <p class="me-2">專案總金額</p>
+            <p class="me-2 ">專案總金額</p>
             <p>NT$ 1,680,000</p>
           </div>
 
           <p class="fw-bold">上傳資料</p>
           <div class="row mb-3 gy-3 gy-md-0">
-            <div class="col-md-3">
+            <div class="col-sm-6 col-md-3">
               <div class="">
                 <img src="images/costing.png" alt="" class="w-100" />
               </div>
@@ -351,7 +352,7 @@
                 >20220621_報價A.pdf</a
               >
             </div>
-            <div class="col-md-3">
+            <div class="col-sm-6 col-md-3">
               <div class="">
                 <img src="images/costing.png" alt="" class="w-100" />
               </div>
@@ -359,7 +360,7 @@
                 >20220621_報價A.pdf</a
               >
             </div>
-            <div class="col-md-3">
+            <div class="col-sm-6 col-md-3">
               <div class="">
                 <img src="images/costing.png" alt="" class="w-100" />
               </div>
@@ -367,7 +368,7 @@
                 >20220621_報價A.pdf</a
               >
             </div>
-            <div class="col-md-3">
+            <div class="col-sm-6 col-md-3">
               <div class="">
                 <img src="images/costing.png" alt="" class="w-100" />
               </div>
