--- a/project.html
+++ b/project.html
@@ -14,14 +14,6 @@
     <meta property="og:image" content="images/share.jpg" />
     <meta name="description" content="#" />
 
-    <!-- 引用bs的css (CDN) -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
-      crossorigin="anonymous"
-    />
-
     <!-- 引用font awesome 6.2.1  -->
     <link rel="stylesheet" href="fontawesome-free-6.2.1-web/css/all.css" />
     <!-- 引bs-icon -->
@@ -32,9 +24,6 @@
 
     <!-- 引用favicon (local自行放） -->
     <link rel="shortcut icon" href="images/favicon.ico" />
-    <!-- 自行設定css -->
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
 
     <!-- jQuery(CDN) DataTable的query必引用 -->
     <script
@@ -44,7 +33,7 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <!-- RWD js -->
+    <!-- datatable RWD js -->
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script
       src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"
@@ -56,9 +45,10 @@
       rel="stylesheet"
       href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css"
     />
+    <!-- datatable js -->
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
 
-    <!-- RWD css -->
+    <!-- datatable RWD css -->
     <link
       href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css"
     />
@@ -66,11 +56,37 @@
       href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.dataTables.min.css"
     />
 
+    <!-- datatable bs css -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="    https://cdn.datatables.net/responsive/2.5.0/css/responsive.bootstrap5.min.css"
+    />
+
     <!-- css link (自定義的表格css位置,要放在最後面)-->
     <link rel="stylesheet" href="DataTables/ab-dataTables.css" />
 
-    <!-- css link (bs) 8/23飲用後發現有奇怪線條-->
+    <!-- css link (bs) 8/23引用後發現有奇怪線條-->
     <!-- <link rel="stylesheet" href="bootstrap-5.2.2-dist/css/bootstrap.css" /> -->
+
+    <!-- 引用bs的css (CDN) -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+
+    <!-- 自行設定css(我的專案reset要擺在最下面 不然功能列的icon會有奇怪樣式) -->
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <style>
       /* * {
@@ -280,7 +296,7 @@
               <div class="input-group-append">
                 <!-- 圓形的搜尋圖示 -->
                 <button
-                  class="btn btn-secondary rounded-circle me-1"
+                  class="btn btn-secondary rounded-circle me-1 circle-btn-40"
                   type="button"
                 >
                   <i class="fas fa-search"></i>
@@ -296,7 +312,7 @@
         <p class="fs-4 m-0">我的專案</p>
         <!-- 增加的圖示 -->
         <a
-          class="btn btn-secondary rounded-circle ms-2"
+          class="btn btn-secondary rounded-circle ms-2 circle-btn-30 d-flex justify-content-center align-items-center"
           href="project-add.html"
         >
           <i class="fas fa-plus"></i>
@@ -311,28 +327,26 @@
       >
         <thead>
           <tr>
-            <th>Column 1</th>
-            <th>Column 2</th>
-            <th>Column 3</th>
-            <th>Column 4</th>
-            <th>Column 5</th>
-            <th>Column 2</th>
-            <th>Column 3</th>
-            <th>Column 4</th>
+            <th data-priority="3">專案號碼</th>
+            <th>客戶</th>
+            <th data-priority="1">專案名稱</th>
+            <th>業務</th>
+            <th>設計</th>
+            <th>總金額</th>
+            <th data-priority="2">狀態</th>
             <th>功能</th>
           </tr>
         </thead>
 
         <tbody>
           <tr>
-            <td>微軟Surface上市記者會</td>
-            <td>微軟設計案</td>
-            <td>Row 1 Data 1</td>
-            <td>Row 2 Data 2</td>
-            <td>Row 1 Data 1</td>
-            <td>Row 2 Data 2</td>
-            <td>Row 1 Data 1</td>
-            <td>Row 5 Data 2</td>
+            <td>10905001</td>
+            <td>ASUS</td>
+            <td>ASUS Zenpad主視覺設計</td>
+            <td>Ryan</td>
+            <td>Rovie</td>
+            <td>NT$100000</td>
+            <td>進行中</td>
             <td>
               <a href="project-review.html" class="me-1">
                 <i class="bi bi-eye"></i>
@@ -346,56 +360,13 @@
             </td>
           </tr>
           <tr>
-            <td>Row 1 Data 1</td>
-            <td>Row 1 Data 2</td>
-            <td>Row 1 Data 1</td>
-            <td>Row 1 Data 2</td>
-            <td>Row 7 Data 1</td>
-            <td>Row 8 Data 2</td>
-            <td>Row 1 Data 1</td>
-            <td>Row 1 Data 2</td>
-            <td>
-              <a href="project-review.html" class="me-1 link-secondary">
-                <i class="bi bi-eye"></i>
-              </a>
-              <a href="project-edit.html" class="me-1 link-secondary">
-                <i class="bi bi-pencil-fill"></i>
-              </a>
-              <a href="#" class="delete-row me-1 link-secondary">
-                <i class="fa-solid fa-trash-can"></i>
-              </a>
-            </td>
-          </tr>
-          <tr>
-            <td>Row 1 Data 1</td>
-            <td>Row 1 Data 2</td>
-            <td>Row 1 Data 1</td>
-            <td>Row 1 Data 2</td>
-            <td>Row 7 Data 1</td>
-            <td>Row 8 Data 2</td>
-            <td>Row 1 Data 1</td>
-            <td>Row 1 Data 2</td>
-            <td>
-              <a href="project-review.html" class="me-1">
-                <i class="bi bi-eye"></i>
-              </a>
-              <a href="project-edit.html" class="me-1">
-                <i class="bi bi-pencil-fill"></i>
-              </a>
-              <a href="#" class="delete-row me-1">
-                <i class="fa-solid fa-trash-can"></i>
-              </a>
-            </td>
-          </tr>
-          <tr>
-            <td>Row 1 Data 1</td>
-            <td>Row 1 Data 2</td>
-            <td>Row 1 Data 1</td>
-            <td>Row 1 Data 2</td>
-            <td>Row 7 Data 1</td>
-            <td>Row 8 Data 2</td>
-            <td>Row 1 Data 1</td>
-            <td>Row 1 Data 2</td>
+            <td>10905001</td>
+            <td>ASUS</td>
+            <td>微軟主視覺設計</td>
+            <td>Ryan</td>
+            <td>Abbie</td>
+            <td>NT$100000</td>
+            <td>進行中</td>
             <td>
               <a href="project-review.html" class="me-1">
                 <i class="bi bi-eye"></i>
@@ -420,19 +391,19 @@
       </div>
     </footer>
 
-		<!-- jQuery(CDN) -->
-		<!-- <script
+    <!-- jQuery(CDN) -->
+    <!-- <script
 			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
 			integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		></script> -->
-		<!-- 引用bs的js (CDN) -->
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-			crossorigin="anonymous"
-		></script>
+    <!-- 引用bs的js (CDN) -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      crossorigin="anonymous"
+    ></script>
 
     <script>
       // 取得當前年份
@@ -684,7 +655,15 @@
             searchPlaceholder: "請輸入關鍵字",
             thousands: ",",
           },
+          //要rwd （新增功能）
           responsive: true,
+          //priority（新增功能）
+          columnDefs: [
+            { responsivePriority: 1, targets: 0 },
+            { responsivePriority: 2, targets: -1 },
+            { responsivePriority: 3, targets: -2 },
+            { responsivePriority: 4, targets: -3 },
+          ],
         });
       });
     </script>
